@@ -1,0 +1,25 @@
+
+
+#################################
+datamanager - easy access to data
+#################################
+
+.. automodule:: spacepy.datamanager
+
+.. currentmodule:: spacepy.datamanager
+
+.. rubric:: Classes
+
+.. autosummary::
+    :template: clean_class.rst
+    :toctree: autosummary
+
+    DataManager
+
+.. rubric:: Functions
+
+.. autosummary::
+    :toctree: autosummary
+
+    insert_fill
+
